welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
var condition:Int = 2 * biscuits = caseOrange + 1
                      ^RunHalf:12: error: Unit does not take parameters
  } else () {
            ^