welcome.lessons.welcome.variables.RunHalf.scala.code
var biscuits:Int =0;
var caseOrange:Int = 0;
var condition:Int = 2 * biscuits = caseOrange + 1
while (condition != true) {
  if (estSurOrange()){
    avance();
    caseOrange = caseOrange + 1;
  }
  if (estSurBiscuit()) {
    avance();
    biscuits = biscuits + 1
  } else () {
    avance();
  }
}